--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,14 @@ version = "0.1.0"
 description = ""
 authors = ["Your Name <you@example.com>"]
 readme = "README.md"
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.10"
 aiogram = "^3.6.0"
 aiogram-dialog = "^2.1.0"
+pydantic = "^2.7.2"
+pydantic-settings = "^2.2.1"
 
 
 [build-system]
