--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,12 @@ aiogram = "^3.6.0"
 aiogram-dialog = "^2.1.0"
 pydantic = "^2.7.2"
 pydantic-settings = "^2.2.1"
+alembic = "^1.13.1"
+asyncpg = "^0.29.0"
 
+
+[tool.poetry.group.dev.dependencies]
+black = "^24.4.2"
 
 [build-system]
 requires = ["poetry-core"]
