--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ pydantic = "^2.7.2"
 pydantic-settings = "^2.2.1"
 alembic = "^1.13.1"
 asyncpg = "^0.29.0"
+pytest = "^8.2.2"
+pytest-asyncio = "^0.23.7"
 
 
 [tool.poetry.group.dev.dependencies]
