--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,4 +24,4 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           push: true
-          tags: botalovserg/test-docker$(date +%s):latest
+          tags: botalovserg/test-docker:latest
