--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,8 +1,8 @@
 services:
   bot:
-    image: "botalovserg/app-bot-docker:latest"
-#    build:
-#       dockerfile: ./Dockerfile
+    # image: "botalovserg/app-bot-docker:latest"
+    build:
+      dockerfile: ./Dockerfile
     # environment:
     #   - APP_DB_URL=postgresql+asyncpg://botalov:botalov@db/bot_db
     restart: "unless-stopped"
