--- a/.env.exemple
+++ b/.env.exemple
@@ -3,5 +3,8 @@ APP_BOT_TOKEN=123456789:ABCDFldaskfjssaem
 # Строка подключения (Data Source Name или DSN) локально
 APP_DB_URL=postgresql+asyncpg://botalov:botalov@127.0.0.1:5435/bot_db
 
-# DSN при подключении в docker compose
+# DSN postgres при подключении в docker compose
 APP_DB_URL=postgresql+asyncpg://botalov:botalov@db/bot_db
+
+# DSN redis при подключении в docker compose
+APP_REDIS_DSN=redis://redis_fsm
